Add cover_url support

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -673,6 +673,7 @@
                 genre: document.getElementById('genre').value,
                 description: document.getElementById('description').value,
                 rating: document.getElementById('rating').value,
+                cover_url: document.getElementById('cover_url').value,
                 personal_rating: 0,
                 box_location: '',
                 notes: ''
